syntax = "proto3";

package news;

import "google/api/annotations.proto";

// > go get -u google.golang.org/grpc

// > go get -u github.com/golang/protobuf/protoc-gen-go

// installprotoc-gen-grpc-gatewayplugin:
// go get -u github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway

// > sudo apt  install protobuf-compiler
// ...
// Следующие НОВЫЕ пакеты будут установлены:
// libprotobuf-dev libprotoc17 protobuf-compiler
// ...

// > protoc --version
// libprotoc 3.6.1

// protoc -I proto proto/newsservice.proto -I${GOPATH}/src/github.com/grpc-ecosystem/grpc-gateway --grpc-gateway_out=logtostderr=true:. --go_out=plugins=grpc:proto/

protoc -IC:\dev\bin\protoc-3.5.1\include -I. -I%GOPATH%\src -I%GOPATH%\src\github.com\grpc-ecosystem\grpc-gateway\third_party\googleapis --go_out=plugins=grpc:. .\my-proto\my-service.proto

protoc -IC:\dev\bin\protoc-3.5.1\include -I. -I%GOPATH%\src -I%GOPATH%\src\github.com\grpc-ecosystem\grpc-gateway\third_party\googleapis --grpc-gateway_out=logtostderr=true:. \my-proto\my-service.proto

protoc -I/usr/local/include -I. \
  -I$GOPATH/src \
  -I$GOPATH/src/github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis \
  --grpc-gateway_out=logtostderr=true:. \
  library.proto

  

// >protoc -I proto proto/newsservice.proto --go_out=plugins=grpc:proto/
// WARNING: Missing 'go_package' option in "newsservice.proto",
// please specify it with the full Go package path as a future release of protoc-gen-go will require this be specified.
// See https://developers.google.com/protocol-buffers/docs/reference/go-generated#package for more information.



message LastNews {
    string sample = 1;
    bytes news = 2;
}

message MessageParams {
string sources = 1;
string keywords = 2;

}

service NewsService {
    rpc GetNews(MessageParams) returns (LastNews) {
        option (google.api.http) = { get: "/v1/news/last" body: "*" };
    }
}